--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
+requests
 https://github.com/Rapptz/discord.py/archive/rewrite.zip#egg=discord.py
-Django==2.1
-httmock==1.2.6
-pytest==3.7.3
-pytest-asyncio==0.9.0
-pytest-django==3.4.2
-python-dateutil==2.7.3
-pytz==2018.5
-requests==2.19.1
-GitPython==2.1.11
-texttable==1.4.0
-praw==6.0.0
+Django
+httmock
+pytest
+pytest-asyncio
+pytest-django
+python-dateutil
+pytz
+GitPython
+texttable
+praw
 unidecode
